@@ -1,6 +1,6 @@
 Metadata-Version: 1.1
 Name: moa
-Version: 0.11.20
+Version: 0.11.21
 Summary: Moa - command-line workflows (in bioinformatics)
 Home-page: http://mfiers.github.com/Moa/
 Author: Mark Fiers
